# opengl-brick

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  brick.mtl  build.sh  fragmentShader.gl  glad.c  glad.h  linmath.h  main.cpp  mesh.cpp  mesh.h  stb_image.h  vertexShader.gl
